--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,31 @@ li {
   list-style: none;
 }
 
+/*Header*/
+.logo {
+  max-width: 50%;
+  height: auto;
+  padding-top: 40px;
+  margin: 0;
+}
+
+.fa-chevron-down {
+  margin: 10% 0;
+  font-size: 30pt;
+  display: block;
+}
+
+.hero {
+  background-color: #CAEFEF;
+  height: 100vh;
+  text-align: center;
+  position: relative;
+  background-image: url('/images/manos.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50% 100%;
+}
+
 .container {
   width: 100%;
 }
@@ -31,7 +56,7 @@ li {
   width: 75%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-gap: 30px;
   justify-content: space-between;
   align-content: space-between;
@@ -73,9 +98,14 @@ li {
 }
 
 .ability {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   padding: 5px;
+}
+
+nav {
+  width: 100%;
+  font-size: 17pt;
 }
 
 .profile-container {
@@ -119,4 +149,49 @@ li {
   content: "  -  ";
   display: inline;
   color: black;
+}
+
+.contact-container {
+  width: 100%;
+}
+
+#contact-form {
+  width: 80%;
+  margin: 0 auto;
+  padding: 40px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: row;
+  padding: 10px 0;
+  justify-content: space-around;
+}
+
+label {
+  padding: 10px;
+  width: 200px;
+  font-size: 15pt;
+}
+
+input {
+  height: 40px;
+  font-size: 15pt;
+  flex-grow: 1;
+}
+
+footer{
+  max-width: 100%;
+  margin:0;
+  background-color: #CAEFEF;
+  padding-top: 30px;
+  margin-top: 30px;
+  padding-bottom: 40px;
+  text-align: center;
+
+}
+.Footer{
+  width: 75%;
+  text-align: center;
+  margin:0 auto;
 }
