--- a/src/styles.css
+++ b/src/styles.css
@@ -24,14 +24,14 @@ li {
 }
 
 .fa-chevron-down {
-  margin: 15% 0;
+  margin-top: 15%;
   font-size: 30pt;
   display: block;
 }
 
 .hero {
   background-color: #CAEFEF;
-  height: 100vh;
+  height: auto;
   text-align: center;
   position: relative;
   background-image: url('/images/manos.png');
@@ -42,15 +42,21 @@ li {
 
 .container {
   width: 100%;
-  padding: 20px 0;
+  padding: 10px 0;
 }
 
 .makers-title {
   font-size: 40px;
   text-align: left;
-  padding-left: 200px;
+  padding-left: 10%;
   text-transform: uppercase;
-  margin: 10px 0;
+}
+
+@media screen and (max-width: 670px) {
+  .makers-title {
+    text-align: center;
+    padding: 0;
+  }
 }
 
 .grid-container {
@@ -132,7 +138,10 @@ nav {
 
 .profile-img {
   border-radius: 50%;
-  height: 300px;
+  max-width: 250px;
+  max-height: 250px;
+  width: auto;
+  height: auto;
 }
 
 .profile-info {
@@ -165,6 +174,16 @@ nav {
   color: black;
 }
 
+@media screen and (max-width: 670px) {
+  .profile-container {
+    flex-direction: column;
+    padding: 20px 0;
+  }
+  .profile-info {
+    margin: 0;
+  }
+}
+
 .contact-container {
   width: 100%;
 }
@@ -181,14 +200,15 @@ nav {
   display: flex;
   flex-direction: row;
   padding: 10px 0;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
 label {
   padding: 10px;
-  width: 200px;
+  width: auto;
   font-size: 15pt;
+  text-align: left;
 }
 
 .form-group:nth-child(3) > label {
@@ -197,10 +217,10 @@ label {
 }
 
 input, textarea {
+  width: 75%;
   padding: 6px;
   height: 40px;
   font-size: 13pt;
-  flex-grow: 1;
   border-style: solid;
   border-color: #aaa;
   border-width: .5px;
@@ -225,6 +245,19 @@ textarea {
   text-align: center;
 }
 
+@media screen and (max-width: 670px) {
+  #contact-form {
+    padding: 10px 0;
+  }
+  .contact-title {
+    padding: 50px 10px 0 10px;
+  }
+  label {
+    padding: 0 10px 0 0;
+    font-size: 12pt;
+  }
+}
+
 footer{
   max-width: 100%;
   margin:0;
@@ -234,6 +267,7 @@ footer{
   text-align: center;
 
 }
+
 .Footer{
   width: 75%;
   text-align: center;
