--- a/src/styles.css
+++ b/src/styles.css
@@ -17,14 +17,14 @@ li {
 
 /*Header*/
 .logo {
-  max-width: 50%;
+  max-width: 40%;
   height: auto;
-  padding-top: 40px;
+  padding-top: 50px;
   margin: 0;
 }
 
 .fa-chevron-down {
-  margin-top: 15%;
+  margin-top: 12%;
   font-size: 30pt;
   display: block;
 }
@@ -38,6 +38,20 @@ li {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: 50% 100%;
+}
+
+.projects-btn {
+  display: block;
+  margin: 3% auto 0  ;
+  font-size: 20pt;
+  border: 3px black solid;
+  width: 30%;
+  padding: 15px 10px;
+  transition: 0.2s;
+}
+
+.projects-btn:hover {
+  background-color: white;
 }
 
 .container {
@@ -59,6 +73,10 @@ li {
   }
 }
 
+.solo-container{
+  text-align: center;
+}
+
 .grid-container {
   width: 75%;
   margin: 0 auto;
@@ -76,7 +94,7 @@ li {
   margin: 15px;
 }
 
-.maker-container:hover {
+.maker-container:hover, .solo-container:hover {
   cursor: pointer;
 }
 
@@ -126,6 +144,16 @@ nav {
 
 .nav-link {
   max-width: 80px;
+  display: inline-block;
+  transition: transform 0.5s;
+}
+
+.nav-link:nth-child(1) {
+  margin-right: 30px;
+}
+
+.nav-link:hover {
+  transform: translateY(-3px);
 }
 
 .profile-container {
@@ -258,18 +286,39 @@ textarea {
   }
 }
 
+.project-container {
+  width: 70%;
+  margin: 20px auto;
+  padding: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.project-img {
+  border-radius: 50%;
+  width: 150px;
+  max-height: 150px;
+}
+
+.project-info {
+  width: 80%;
+}
+
 footer{
   max-width: 100%;
   margin:0;
   background-color: #CAEFEF;
-  padding-top: 30px;
-  padding-bottom: 40px;
+  padding-top: 40px;
+  padding-bottom: 50px;
   text-align: center;
 
 }
 
 .Footer{
-  width: 75%;
+  width: 55%;
+  font-size: 15pt;
   text-align: center;
   margin:0 auto;
 }
